# DeepOmics

./: pyproject.toml
src/deepomics/: __init__.py  cli.py  config.py  core.py  io.py  plotting.py  selectors.py  utils.py
